# vdt_fastspi

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_CONTEXT.md  README.md  REPORT_OUTLINE.md  SPIFAST-HLD-001-VI.md  SPIFAST-SRS-001-VI.md  VDT_rule-nx77ggh6bfgddgas5wifdxh5ry (1).xlsx  [Template] Dàn bài báo cáo.docx
config/: spi_rules.conf
docs/: BUILD.md  HLD.md  IMPLEMENTATION_DEVIATION_REPORT.md  SDD.md  SRS.md  architecture_validation.md
src/: main.c
src/dpdk/: dpdk_init.c  dpdk_init.h
src/include/: config.h
src/logging/: log.c  log.h
src/packet/: parser.c  parser.h  pkt_ctx.h  rx.c  rx.h
src/perf/: perf_stats.c  perf_stats.h
src/rule/: acl_engine.c  acl_engine.h  rule_loader.c  rule_loader.h
src/stats/: stats.c  stats.h
src/tx/: tx.c  tx.h
src/worker/: worker.c  worker.h
tests/: test_acl.c  test_parser.c  test_rule_loader.c
tools/pcap_gen/: gen_pcap.py
